--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-<script src="js/main.js"></script>
+<script src="static/js/main.js"></script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <link rel="stylesheet" href="static/css/leaflet.zoomhome.css"/>
 <script src="static/js/leaflet.zoomhome.min.js"></script>
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="static/css/main.css">
 </head>
 <body>
   <div id="header">
