--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script src="https://unpkg.com/jsts/dist/jsts.min.js"></script>
+<script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
    integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
    crossorigin=""/>
@@ -48,17 +48,6 @@
 var turnout,
     candidates,
     results;
-
-// topology variables
-var baseLayer,
-    dist1,
-    dist2;
-
-// JSTS variables
-var rTree,
-    rTree2,
-    reader = new jsts.io.GeoJSONReader(),
-    writer = new jsts.io.GeoJSONWriter();
 
 var electionSelect = d3.select("#election-select"),
     raceSelect = d3.select("#race-select"),
@@ -201,14 +190,15 @@ function draw(precincts) {
         precinctFeatures = topojson.feature(precincts, precincts.objects.precincts).features,
         filteredPrecincts = precinctFeatures.filter(d => usePrecincts.includes(d.properties.full_text));
 
+    var precinctIntersections = [];
     if (typeof districtTopo !== 'undefined') {
-      rTree = new jsts.index.strtree.STRtree()
-      filteredPrecincts.map(d => {
-        d.polygon = reader.read(d.geometry)
-        rTree.insert(d.polygon.getEnvelopeInternal(), d)
+      filteredPrecincts.forEach(function(layer1){
+        var intersection = turf.intersect(layer1, topojson.feature(districtTopo, districtTopo.objects.districts).features.filter(d => d.properties.district == district)[0], {properties: layer1.properties});
+          if(intersection!=undefined){
+            precinctIntersections.push(intersection);
+          }
+        filteredPrecincts = precinctIntersections;
       });
-
-      filteredPrecincts = findIntersection(topojson.feature(districtTopo, districtTopo.objects.districts).features.filter(d => d.properties.district == district)[0], rTree);
     }
 
     // calculate overall results for chosen election
@@ -277,8 +267,8 @@ function draw(precincts) {
         });
 
     // center map on feature and reset home position
-    var bbox = d3.geoBounds({type: "FeatureCollection", "features": filteredPrecincts});
-    bbox.forEach(b => b.reverse());
+    var bbox = turf.bbox({type: "FeatureCollection", "features": filteredPrecincts});
+    bbox = [[bbox[1], bbox[0]], [bbox[3], bbox[2]]]
     map.flyToBounds(bbox)
     zoomHome.setHomeBounds(bbox);
 
@@ -408,18 +398,6 @@ function parseResults(d, i) {
 
 function parsePrecinct(p) {
   return isNaN(p) ? p : "Ward " + +p.slice(0,2) + " Precinct " + +p.slice(2);
-}
-
-function findIntersection(topo, rt) {
-  var searchPolygon = reader.read(topo.geometry)
-  var intersections = [];
-  rt.query(searchPolygon.getEnvelopeInternal()).array.forEach(function(d) {
-    var intersection = d.polygon.intersection(searchPolygon);
-    intersections.push({"type": "Feature", "geometry": intersection, "properties": d.properties})
-  })
-
-  intersectionsGeoJSON = intersections.map(d => ({"type": "Feature", "geometry": writer.write(d.geometry), "properties": d.properties}));
-  return intersectionsGeoJSON
 }
 </script>
 <footer>
