--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@ if (!L.Browser.touch) {
   L.DomEvent.disableClickPropagation(captionDiv);
 }
 
-var zoomHome = L.Control.zoomHome();
-zoomHome.addTo(map);
+//var zoomHome = L.Control.zoomHome();
+//zoomHome.addTo(map);
 
 var legend = L.control({position: 'bottomleft'});
 
@@ -119,6 +119,53 @@ legend.onAdd = function(map) {
   div.innerHTML = "<svg class='svg-legend'></svg>"
 
   return div;
+}
+
+layer = L.control({position: 'topleft'});
+//layer = L.control.layers(null);
+
+layer.onAdd = function(map) {
+  var div = L.DomUtil.create("div", "empty");
+  div.innerHTML = `<div class="leaflet-control-layers leaflet-control" aria-haspopup="true">
+    <a class="leaflet-control-layers-toggle" href="#" title="Layers"></a>
+    <form class="leaflet-control-layers-list">
+    <div id="brush">
+    </div>
+      <div class="leaflet-control-layers-base" style='display:inline;'>
+        <input type="radio" class="filterByRadio" id="filterByRenterPct" name="filterBy" value="renterPct" checked> Renter % <br>
+        <input type="radio" class="filterByRadio" id="filterByWhitePct" name="filterBy" value="whitePct"> White % <br>
+        <input type="radio" class="filterByRadio" id="filterByBlackPct" name="filterBy" value="blackPct"> Black % <br>
+        <input type="radio" class="filterByRadio" id="filterByLatinoPct" name="filterBy" value="latinoPct"> Latino % <br>
+        <input type="radio" class="filterByRadio" id="filterByAsianPct" name="filterBy" value="asianPct"> Asian % <br>
+        <input type="radio" class="filterByRadio" id="filterByIncome" name="filterBy" value="income"> Med Household Income <br>
+        <input type="radio" class="filterByRadio" id="filterBySpanish" name="filterBy" value="spanish"> Spanish Speaker % <br>
+        <input type="radio" class="filterByRadio" id="filterByNonEnglish" name="filterBy" value="non-english"> Non-English Speaker %
+      </div>
+      <div class="leaflet-control-layers-separator" style="display: none;"></div>
+      <div class="leaflet-control-layers-overlays"></div>
+    </form>
+  </div>`
+
+  div.firstChild.onmouseover = function() {
+    div.firstChild.classList.add("leaflet-control-layers-expanded");
+  }
+
+  div.firstChild.onmouseout = function() {
+    div.firstChild.classList.remove("leaflet-control-layers-expanded");
+  }
+
+  return div;
+}
+
+layer.addTo(map);
+filterByRadios = d3.selectAll(".filterByRadio");
+
+var leafletControlDiv = d3.select(".leaflet-control-layers.leaflet-control").node();
+if (!L.Browser.touch) {
+  L.DomEvent.disableClickPropagation(leafletControlDiv);
+  L.DomEvent.disableScrollPropagation(leafletControlDiv);
+} else {
+  L.DomEvent.disableClickPropagation(leafletControlDiv);
 }
 
 // add svg overlay to map
@@ -133,6 +180,84 @@ var winnerColor = d3.scaleOrdinal(
   ).unknown("#76797E");
 var pctColor = d3.scaleQuantile()
     .domain([0, 75]);
+
+// DEMOGRAPHIC BRUSH FILTER DEFINITIONS AND FUNCTIONS
+var clamp = d3.scaleLinear()
+    .domain([0, 100])
+    .range([0, 100])
+    .clamp(true);
+
+var BrushMargin = {BrushTop: 20, BrushBottom: 20, BrushRight: 15, BrushLeft: 10},
+    height = 60 - BrushMargin.BrushTop - BrushMargin.BrushBottom,
+    width = 250 - BrushMargin.BrushLeft - BrushMargin.BrushRight;
+
+var brushX = d3.scaleLinear()
+    .domain([0, 100])
+    .range([0, width])
+    .clamp(true);
+
+var brushSvg = d3.select("#brush")
+  .append("svg")
+    .attr("width", width + BrushMargin.BrushLeft + BrushMargin.BrushRight)
+    .attr("height", height + BrushMargin.BrushTop + BrushMargin.BrushBottom)
+  .append("g")
+    .attr("transform", "translate(" + BrushMargin.BrushLeft + "," + BrushMargin.BrushTop + ")");
+
+var gb = brushSvg.append("g");
+
+brushTitle = brushSvg.append("title").attr("id", "brush-title");
+
+var demographicBrush = brushSvg.append("g")
+    .attr("id", "brushAxis")
+    .attr("transform", "translate(0," + height + ")");
+
+var brushXAxis = d3.axisBottom(brushX)
+    .tickSize(2);
+
+demographicBrush.call(brushXAxis);
+
+//demographicBrush.selectAll(".tick line,path").style("visibility", "hidden")
+
+var brush = d3.brushX()
+    .extent([[0, 0], [width, height]])
+    .on("brush", brushed);
+
+function brushed() {
+  const selection = d3.event.selection;
+  if (selection) {
+    var x0 = brushX.invert(selection[0]),
+        x1 = brushX.invert(selection[1]),
+        demographic = filterByRadios.nodes().filter(x => x.checked)[0].value;
+    brushTitle.html(`[${+x0.toFixed(1)}, ${+x1.toFixed(1)}]`);
+
+    d3.selectAll(".precinct-path")
+        .classed("brushed-hidden", d => ((clamp(d.properties[demographic]) < x0) || (clamp(d.properties[demographic]) > x1)) ? true : null);
+  }
+
+  d3.select(this).call(brushHandle, selection);
+}
+
+brushHandle = (g, selection) => g
+  .selectAll(".handle--custom")
+  .data([{type: "w"}, {type: "e"}])
+  .join(
+    enter => enter.append("path")
+        .attr("class", "handle--custom")
+        .attr("fill", "#666")
+        .attr("fill-opacity", 0.8)
+        .attr("stroke", "#000")
+        .attr("stroke-width", 1.5)
+        .attr("cursor", "ew-resize")
+        .attr("d", arc)
+  )
+    .attr("display", selection === null ? "none" : null)
+    .attr("transform", selection === null ? null : (d, i) => `translate(${selection[i]},${(height) / 2})`)
+
+arc = d3.arc()
+    .innerRadius(0)
+    .outerRadius(height / 2)
+    .startAngle(0)
+    .endAngle((d, i) => i ? Math.PI : -Math.PI)
 
 // load geospatial boundaries
 loadTurnoutData();
@@ -266,11 +391,14 @@ function draw(precincts) {
           caption.update(null);
         });
 
+    gb.call(brush)
+      .call(brush.move, [brushX(10), width]);
+
     // center map on feature and reset home position
     var bbox = turf.bbox({type: "FeatureCollection", "features": filteredPrecincts});
     bbox = [[bbox[1], bbox[0]], [bbox[3], bbox[2]]]
     map.flyToBounds(bbox)
-    zoomHome.setHomeBounds(bbox);
+    //zoomHome.setHomeBounds(bbox);
 
     map.on("moveend", reset);
     reset();
