Add scroll to results table
Scroll table body, fix head if results table exceeds max height.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div id="results">
     <table id="results-table">
       <thead>
-        <tr><th class="name-cell">Candidates</th><th class="num-cell">Votes</th><th class="num-cell">Pct</th></tr>
+        <tr><th class="name-cell">Candidates</th><th class="num-cell">Votes</th><th class="num-cell">Pct</th><th></th></tr>
       </thead>
       <tbody>
       </tbody>
@@ -140,7 +140,7 @@ layer.onAdd = function(map) {
         <input type="radio" class="filterByRadio" id="filterByAsianPct" name="filterBy" value="asianPct"> Asian % <br>
         <input type="radio" class="filterByRadio" id="filterByIncome" name="filterBy" value="income"> Med Household Income <br>
         <input type="radio" class="filterByRadio" id="filterBySpanish" name="filterBy" value="spanish"> Spanish Speaker % <br>
-        <input type="radio" class="filterByRadio" id="filterByNonEnglish" name="filterBy" value="non-english"> Non-English Speaker %
+        <input type="radio" class="filterByRadio" id="filterByNonEnglish" name="filterBy" value="nonEnglish"> Non-English Speaker %
       </div>
       <div class="leaflet-control-layers-separator" style="display: none;"></div>
       <div class="leaflet-control-layers-overlays"></div>
