Correct source url in footer

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ function parsePrecinct(p) {
     <span>
       Data by <a href="http://openstreetmap.org">OpenStreetMap</a>, under <a href="http://www.openstreetmap.org/copyright">ODbL</a>.
     </span><br>
-    <span>Source: <a href="https://github.com/spencerchan/maps">https://github.com/spencerchan/maps</a> |
+    <span>Source: <a href="https://github.com/sabrinadchan/chi-election-results-map">GitHub</a> |
     </span>
     <span>City results: <a href="https://chicagoelections.gov/en/election-results.html">Chicago Board of Election Commissioners</a>
     </span> |
